@@ -106,6 +106,9 @@ def end():
     finish_previous()
     html.unplug()
 
+    if not table:
+        return
+
     if not table["rows"] and table["omit_if_empty"]:
         table = None
         return
